Fix violations of ArchUnit