@@ -1,7 +1,6 @@
 package io.cornerstone.core.security;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -14,7 +13,7 @@ public interface UserRoleMapper extends UserAuthorityMapper {
 
 	@Override
 	default Collection<? extends GrantedAuthority> mapAuthorities(UserDetails user) {
-		return mapRoles(user).stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+		return mapRoles(user).stream().map(SimpleGrantedAuthority::new).toList();
 	}
 
 }
